Update 'fnk5pm81p-java-quarkus' component image to: rhtap-quay-quay-rhtap-quay.apps.clusterpool-sdp9s.rhtap.devcluster.openshift.com/rhtap/rhtap-qe-java-quarkus:2e4a7a9ea86b596b948475520d3a57859208360c@sha256:15640ef88f2a59611570082e7c30a8ac918c42933094aec3f9f1547097958ebf

--- a/components/fnk5pm81p-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/fnk5pm81p-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: fnk5pm81p-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.clusterpool-sdp9s.rhtap.devcluster.openshift.com/rhtap/rhtap-qe-java-quarkus:2e4a7a9ea86b596b948475520d3a57859208360c@sha256:15640ef88f2a59611570082e7c30a8ac918c42933094aec3f9f1547097958ebf
+          name: container-image
